# client-tool

./: .env.development  .env.production  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
openspec/: README.md
openspec/changes/: v1-initial.md
openspec/contracts/: api-conventions.md
openspec/contracts/modules/: account.md  admin.md  audit.md  clearing.md  document.md  payment.md  position.md  product.md  reconciliation.md  session.md  suitability.md  trade.md
openspec/project/: glossary.md  sprints.md  v1-scope.md
openspec/specs/: architecture.md  desktop-ui.md  pages.md
src/: App.vue  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: account.ts  audit.ts  authTicket.ts  document.ts  http.ts  index.ts  mock.ts  position.ts  product.ts  session.ts  sessionWs.ts  suitability.ts  trade.ts
src/composables/: useSessionSocket.ts
src/constants/: brand.ts
src/layouts/: AppShell.vue  AuthLayout.vue
src/router/: index.ts
src/stores/: auth.ts  sessions.ts
src/styles/: base.css  tokens.css
src/types/: account.ts  api.ts  audit.ts  document.ts  position.ts  product.ts  session.ts  suitability.ts  trade.ts
src/utils/: device.ts  idempotency.ts  labels.ts  money.ts  rememberLogin.ts
src/views/: Home.vue
src/views/account/: BindCard.vue  Kyc.vue  OpenAccount.vue
src/views/auth/: Login.vue  Register.vue
src/views/document/: Messages.vue
(+10 files in other folders)
