[package]
name = "fund-mac"
version = "0.1.0"
description = "基金代销 macOS 客户端"
authors = ["fund-mac"]
edition = "2021"

[lib]
name = "fund_mac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-http = "2.5.9"
